--- a/Demo20181116.ipynb
+++ b/Demo20181116.ipynb
@@ -4123,6 +4123,50 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 回家作業\n",
+    "先讀入文章資料　appledaily_hw.xlsx ，請利用跟文字資料建立詞頻矩陣，並建立一個字詞相關性計算函式，試者找出與”台北市長”最相關的前十字詞"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "appledaily = pandas.read_excel('https://raw.githubusercontent.com/ywchiu/ctbc/master/data/appledaily_hw.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 378,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 899 entries, 0 to 898\n",
+      "Data columns (total 4 columns):\n",
+      "category    899 non-null object\n",
+      "content     899 non-null object\n",
+      "link        899 non-null object\n",
+      "title       899 non-null object\n",
+      "dtypes: object(4)\n",
+      "memory usage: 35.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "appledaily.info()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
