--- a/Demo20181130.ipynb
+++ b/Demo20181130.ipynb
@@ -87,6 +87,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "posts = ['This is a toy post about machine learning. Actually, it contains not much interesting stuff.',\n",
+    " 'Imaging databases provide storage capabilities.',\n",
+    " 'Most imaging databases safe images permanently.',\n",
+    " 'Imaging databases store data.',\n",
+    " 'Imaging databases store data. Imaging databases store data. Imaging databases store data.']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
