--- a/Demo20181130.ipynb
+++ b/Demo20181130.ipynb
@@ -186,13 +186,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_post = 'imaging database'\n",
+    "new_post = 'qoo imaging database'\n",
     "new_post_vec = vectorizer.transform([new_post])\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_post_vec.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(new_post_vec.toarray())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy as sp\n",
+    "\n",
+    "# euclidean\n",
+    "# sqrt(sum((v1 - v2) ** 2))\n",
+    "\n",
+    "def dist_raw(v1, v2):\n",
+    "    delta = v1 - v2\n",
+    "    return sp.linalg.norm(delta.toarray())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4142135623730951"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import math\n",
+    "a  = np.array([0,0,1,1,0])\n",
+    "b  = np.array([1,0,1,1,1])\n",
+    "np.sqrt(sum((a - b) ** 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4142135623730951"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp.linalg.norm( (a - b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a toy post about machine learning. Actually, it contains not much interesting stuff. 3.872983346207417\n",
+      "Imaging databases provide storage capabilities. 2.0\n",
+      "Most imaging databases safe images permanently. 2.23606797749979\n",
+      "Imaging databases store data. 1.7320508075688772\n",
+      "Imaging databases store data. Imaging databases store data. Imaging databases store data. 5.5677643628300215\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, num_samples):\n",
+    "    post_vec = X_train.getrow(i)\n",
+    "    d = dist_raw(post_vec, new_post_vec)\n",
+    "    print(posts[i],d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dist(v1, v2):\n",
+    "    v1_normalized  = v1 / sp.linalg.norm(v1.toarray()) \n",
+    "    v2_normalized  = v2 / sp.linalg.norm(v2.toarray())\n",
+    "    delta = v1_normalized - v2_normalized\n",
+    "    return sp.linalg.norm(delta.toarray())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 小內閣之一是她？ 「王淺秋」內定高市新聞局長\n",
+    "# 韓國瑜要在一個月內完成小內閣組閣，局處首長人選，他說目前找到了一半，至於名單有誰，韓國瑜說直接講名字很敏感，會在就職日公布，不過前一天，韓國瑜北上參加私人餐會，媒體在現場等待時間，六福集團的公關協理王淺秋儼然像公關，在場當協調橋樑，加上王淺秋過去就有新聞媒體背景，外傳將接任高雄市新聞局長。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 小內閣 王淺秋 高市 新聞局長\n",
+    "# 小內閣 王淺秋 高市 新聞局長 韓國瑜 首長 人選 一半 名單 敏感..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1,1,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0])\n",
+    "b = np.array([1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1])\n",
+    "delta = a - b\n",
+    "sp.linalg.norm(delta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0514622242382672"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([1,1,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0])\n",
+    "b = np.array([1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1])\n",
+    "a_normalized  = a / sp.linalg.norm(a) \n",
+    "b_normalized  = b / sp.linalg.norm(b)\n",
+    "delta = a_normalized - b_normalized\n",
+    "sp.linalg.norm(delta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a toy post about machine learning. Actually, it contains not much interesting stuff. 1.4142135623730951\n",
+      "Imaging databases provide storage capabilities. 1.0514622242382672\n",
+      "Most imaging databases safe images permanently. 1.0878894332937856\n",
+      "Imaging databases store data. 1.0\n",
+      "Imaging databases store data. Imaging databases store data. Imaging databases store data. 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, num_samples):\n",
+    "    post_vec = X_train.getrow(i)\n",
+    "    d = dist(post_vec, new_post_vec)\n",
+    "    print(posts[i],d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
