--- a/Demo20181130.ipynb
+++ b/Demo20181130.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 英文詞頻矩陣"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -422,6 +429,637 @@
     "    post_vec = X_train.getrow(i)\n",
     "    d = dist(post_vec, new_post_vec)\n",
     "    print(posts[i],d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['actually', 'capabilities', 'contains', 'data', 'databases', 'images', 'imaging', 'interesting', 'learning', 'machine', 'permanently', 'post', 'provide', 'safe', 'storage', 'store', 'stuff', 'toy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "vectorizer = CountVectorizer(stop_words='english')\n",
+    "X_train = vectorizer.fit_transform(posts)\n",
+    "print(vectorizer.get_feature_names())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['noone',\n",
+       " 'our',\n",
+       " 'next',\n",
+       " 'her',\n",
+       " 'other',\n",
+       " 'formerly',\n",
+       " 'around',\n",
+       " 'fifteen',\n",
+       " 'rather',\n",
+       " 'nevertheless']"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(vectorizer.get_stop_words())[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_post = 'qoo imaging database'\n",
+    "new_post_vec = vectorizer.transform([new_post])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a toy post about machine learning. Actually, it contains not much interesting stuff. 1.4142135623730951\n",
+      "Imaging databases provide storage capabilities. 1.0514622242382672\n",
+      "Most imaging databases safe images permanently. 1.0514622242382672\n",
+      "Imaging databases store data. 1.0\n",
+      "Imaging databases store data. Imaging databases store data. Imaging databases store data. 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, num_samples):\n",
+    "    post_vec = X_train.getrow(i)\n",
+    "    d = dist(post_vec, new_post_vec)\n",
+    "    print(posts[i],d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: nltk in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages\n",
+      "Requirement already satisfied: six in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages (from nltk)\n",
+      "\u001b[33mYou are using pip version 9.0.1, however version 18.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk.stem\n",
+    "s = nltk.stem.SnowballStemmer('english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'graphic'"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.stem('graphics')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'imag'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.stem(\"imaging\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'imag'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.stem(\"image\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'imagin'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.stem(\"imagination\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'imagin'"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.stem(\"imagine\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk.stem\n",
+    "english_stemmer = nltk.stem.SnowballStemmer('english')\n",
+    "\n",
+    "class StemmedCountVectorizer(CountVectorizer):\n",
+    "    def build_analyzer(self):\n",
+    "        analyzer = super(StemmedCountVectorizer, self).build_analyzer()\n",
+    "        return lambda doc: (english_stemmer.stem(w) for w in analyzer(doc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['actual', 'capabl', 'contain', 'data', 'databas', 'imag', 'interest', 'learn', 'machin', 'perman', 'post', 'provid', 'safe', 'storag', 'store', 'stuff', 'toy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "vectorizer = StemmedCountVectorizer(stop_words='english')\n",
+    "X_train = vectorizer.fit_transform(posts)\n",
+    "print(vectorizer.get_feature_names())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_post = 'qoo imaging database'\n",
+    "new_post_vec = vectorizer.transform([new_post])\n",
+    "new_post_vec.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a toy post about machine learning. Actually, it contains not much interesting stuff. 1.414213562373095\n",
+      "Imaging databases provide storage capabilities. 0.8573732768944039\n",
+      "Most imaging databases safe images permanently. 0.6296288974669553\n",
+      "Imaging databases store data. 0.7653668647301795\n",
+      "Imaging databases store data. Imaging databases store data. Imaging databases store data. 0.7653668647301795\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, num_samples):\n",
+    "    post_vec = X_train.getrow(i)\n",
+    "    d = dist(post_vec, new_post_vec)\n",
+    "    print(posts[i],d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "class StemmedTfidfVectorizer(TfidfVectorizer):\n",
+    "    def build_analyzer(self):\n",
+    "        analyzer = super(TfidfVectorizer,self).build_analyzer()\n",
+    "        return lambda doc: (english_stemmer.stem(w) for w in analyzer(doc))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['actual', 'capabl', 'contain', 'data', 'databas', 'imag', 'interest', 'learn', 'machin', 'perman', 'post', 'provid', 'safe', 'storag', 'store', 'stuff', 'toy']\n"
+     ]
+    }
+   ],
+   "source": [
+    "vectorizer = StemmedTfidfVectorizer(stop_words='english')\n",
+    "X_train = vectorizer.fit_transform(posts)\n",
+    "print(vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_post = 'qoo imaging database'\n",
+    "new_post_vec = vectorizer.transform([new_post])\n",
+    "#new_post_vec.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a toy post about machine learning. Actually, it contains not much interesting stuff. 1.4142135623730951\n",
+      "Imaging databases provide storage capabilities. 1.0789758507558254\n",
+      "Most imaging databases safe images permanently. 0.859044512133176\n",
+      "Imaging databases store data. 0.924634506718001\n",
+      "Imaging databases store data. Imaging databases store data. Imaging databases store data. 0.924634506718001\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, num_samples):\n",
+    "    post_vec = X_train.getrow(i)\n",
+    "    d = dist(post_vec, new_post_vec)\n",
+    "    print(posts[i],d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 中文詞頻矩陣"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['柯文哲 為 了 大巨蛋 一事 找 趙藤雄 算帳', '柯P 將不在 大巨蛋 舉辦 世運會']"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import jieba\n",
+    "jieba.load_userdict('userdict.txt')\n",
+    "\n",
+    "a = ['柯文哲為了大巨蛋一事找趙藤雄算帳', \n",
+    "     '柯P將不在大巨蛋舉辦世運會']\n",
+    "\n",
+    "corpus = []\n",
+    "for s in a:\n",
+    "    corpus.append(' '.join(jieba.cut(s)))\n",
+    "corpus\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['柯文哲 為 了 大巨蛋 一事 找 趙藤雄 算帳', '柯P 將不在 大巨蛋 舉辦 世運會']"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corpus = [' '.join(jieba.cut(s)) for s in a]\n",
+    "corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['一事', '世運會', '大巨蛋', '將不在', '柯p', '柯文哲', '算帳', '舉辦', '趙藤雄']"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizer.get_feature_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 1, 0, 0, 1, 1, 0, 1],\n",
+       "       [0, 1, 1, 1, 1, 0, 0, 1, 0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "term = '柯文哲'\n",
+    "res = requests.get('https://zh.wikipedia.org/wiki/{}'.format(term))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['柯文哲', 'Ko Wen-je', '柯P', 'KP']"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "soup = BeautifulSoup(res.text, 'lxml')\n",
+    "synonyms = []\n",
+    "for p in soup.select('p'):\n",
+    "    if p.select_one('span'):\n",
+    "        synonyms.extend([w.text for w in p.select('b')])\n",
+    "synonyms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('synonym.txt', 'w') as f:\n",
+    "    f.write('/'.join(synonyms))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ko wen-je': '柯文哲', 'kp': '柯文哲', '柯p': '柯文哲'}"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "synoym_dic = {}\n",
+    "for s in open('synonym.txt', 'r'):\n",
+    "    words = s.split('/')\n",
+    "    for w in words[1:]:\n",
+    "        synoym_dic[w.lower()] = words[0]\n",
+    "synoym_dic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SynonymCountVectorizer(CountVectorizer):\n",
+    "    def build_analyzer(self):\n",
+    "        analyzer = super(SynonymCountVectorizer, self).build_analyzer()\n",
+    "        return lambda doc: (synoym_dic.get(w, w) for w in analyzer(doc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['一事', '世運會', '大巨蛋', '將不在', '柯文哲', '算帳', '舉辦', '趙藤雄']\n"
+     ]
+    }
+   ],
+   "source": [
+    "vectorizer = SynonymCountVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)\n",
+    "print(vectorizer.get_feature_names())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 1, 0, 1, 1, 0, 1],\n",
+       "       [0, 1, 1, 1, 1, 0, 1, 0]], dtype=int64)"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['世運會', '大巨蛋', '將不在', '柯文哲', '算帳', '舉辦', '趙藤雄']\n"
+     ]
+    }
+   ],
+   "source": [
+    "vectorizer = SynonymCountVectorizer(stop_words=['一事'])\n",
+    "X = vectorizer.fit_transform(corpus)\n",
+    "print(vectorizer.get_feature_names())"
    ]
   },
   {
