--- a/Demo20181130.ipynb
+++ b/Demo20181130.ipynb
@@ -1072,10 +1072,302 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas\n",
+    "s = pandas.read_clipboard(header = None)\n",
+    "stopwords = s[0].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#stopwords"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 計算文章相似度"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "news = pandas.read_excel('https://raw.githubusercontent.com/ywchiu/ctbc/master/data/appledaily_hw.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "corpus = []\n",
+    "titles = []\n",
+    "for rec in news.iterrows():\n",
+    "    titles.append(rec[1].title)\n",
+    "    corpus.append(' '.join(jieba.cut(rec[1].content)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "class ChineseCountVectorizer(CountVectorizer):\n",
+    "    def build_analyzer(self):\n",
+    "        analyzer = super(ChineseCountVectorizer, self).build_analyzer()\n",
+    "        return lambda doc: (w for w in analyzer(doc) if re.match('[\\u4e00-\\u9fa5]+', w))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vectorizer = ChineseCountVectorizer(stop_words=stopwords)\n",
+    "X = vectorizer.fit_transform(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<899x36095 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 113215 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_distances\n",
+    "cs = cosine_distances(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(899, 899)"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'【更新】水利會改官派明闖關\\u3000綠委24小時前顧議場大門防藍突襲'"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titles[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "反對水利會改制　吳敦義下令：藍委做好夜宿立院抗爭準備 0.6249319023845766\n",
+      "農田水利會改公務機關　蔡英文：這不是綁樁 0.6650818913541277\n",
+      "【搏感情動畫】台電每年30億敦親睦鄰費　協助立委選民服務 0.7763414418773449\n",
+      "在野黨突襲表決《勞基法》修正案無效　民進黨烙人成功擋下 0.7785595271207466\n",
+      "罷免案將投票　李遠哲今再度現身力挺黃國昌 0.7821725817618267\n",
+      "國防部解約慶富要提告　馮世寬怒嗆三遍：請便 0.787735535313332\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx in cs[0].argsort()[1:11]:\n",
+    "    if cs[0][idx] < 0.8:\n",
+    "        print(titles[idx], cs[0][idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getSimiliarArticle(pos):\n",
+    "    print('查詢文章:', titles[pos])\n",
+    "    for idx in cs[pos].argsort()[1:11]:\n",
+    "        if cs[pos][idx] < 0.8:\n",
+    "            print('相關文章:',titles[idx], cs[pos][idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "查詢文章: 黃國昌：長期目標要消滅國民黨　不支持柯文哲的兩岸一家親\n",
+      "相關文章: 「兩蔣時代」超譯　網友：不准傷皇城內的和氣！ 0.573991318811758\n",
+      "相關文章: 罷免案將投票　李遠哲今再度現身力挺黃國昌 0.5856440615013038\n",
+      "相關文章: 罷昌案周六投票　時代力量全力澄清不實謠言 0.629022271791837\n",
+      "相關文章: 黃國昌若被罷免會更強　他：成為選輸北市的阿扁 0.6310238769836006\n",
+      "相關文章: 【聲援片】沈發惠呼籲罷昌案投「不同意」　黃國昌：謝謝您 0.7457647744915028\n"
+     ]
+    }
+   ],
+   "source": [
+    "getSimiliarArticle(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csw = cosine_distances(X.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(36095, 36095)"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csw.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#titles[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12028"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizer.get_feature_names().index('小嫻')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "何守 0.057847605573501104\n",
+      "密友 0.24791062532467667\n",
+      "何守正 0.2503553599400147\n",
+      "健身房 0.2884303103522792\n",
+      "信妙 0.3126823393798195\n",
+      "分居 0.34939790478943866\n",
+      "宮導致 0.3514046374402636\n",
+      "何家 0.3578979193561096\n",
+      "獨子 0.36503471393081455\n",
+      "不孕 0.36655934526106637\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx in csw[12028].argsort()[1:11]:\n",
+    "    print(vectorizer.get_feature_names()[idx], csw[12028][idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csw[19153].sort()"
+   ]
   }
  ],
  "metadata": {
