--- a/Demo20181130.ipynb
+++ b/Demo20181130.ipynb
@@ -1368,6 +1368,152 @@
    "source": [
     "csw[19153].sort()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 文字分群"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "news = pandas.read_excel('https://raw.githubusercontent.com/ywchiu/ctbc/master/data/20150628news.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus = []\n",
+    "titles = []\n",
+    "for rec in news.iterrows():\n",
+    "    corpus.append(' '.join(jieba.cut(rec[1]['description'])))\n",
+    "    titles.append(rec[1]['title'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<147x12827 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 23782 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "cs = cosine_similarity(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(147, 147)"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import cluster\n",
+    "km = cluster.KMeans(n_clusters=4, init='k-means++', random_state=42)\n",
+    "c = km.fit_predict(cs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "希臘國內三分一自動櫃員機現金短缺\n",
+      "歐元區財長拒希臘延長救助計劃\n",
+      "呂紹煒專欄：違約與退出 希臘與歐洲才能重生(上)\n",
+      "希臘違約在即  歐盟全力穩定經濟\n",
+      "希臘脫歐變可能 歐洲衝擊大\n",
+      "希債協議  法國願盡最後斡旋努力\n",
+      "希臘1／3提款機錢被提光\n",
+      "確保銀行穩定 希臘續與ECB緊密合作\n",
+      "希臘態度強硬 歐元區耐心漸失\n",
+      "希臘盼展延債務 歐元區拒絕\n"
+     ]
+    }
+   ],
+   "source": [
+    "np_titles = np.array(titles)\n",
+    "for rec in np_titles[c==3]:\n",
+    "    print(rec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 任務：\n",
+    "- 請將資料集 20171214news.xlsx (https://raw.githubusercontent.com/ywchiu/ctbc/master/data/20171214news.xlsx) 分成20群並檢視每一群的分群結果"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
